--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -70,6 +70,9 @@
     color: #1775ee;
 }
 
+.loginRegisterButtonLink{
+  text-align: center;
+}
 .loginRegisterButton{
     width: 60%;
     align-self: center;
